// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders correctly 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  padding: 7px;
  text-align: left;
}

<div
  class="emotion-0"
>
  This is content
</div>
`;

exports[`HeaderCell renders correctly 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  padding: 7px;
  text-align: left;
  text-transform: capitalize;
  font-weight: bold;
}

<div
  class="emotion-0"
>
  This is content
</div>
`;

exports[`TextCell renders correctly 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  padding: 7px;
  text-align: left;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="emotion-0"
>
  This is content
</div>
`;
